--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,11 @@
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: draftboard_dev
 
 test:
-    adapter: mysql2
+    adapter: postgresql
     database: draftboard_test
 
 production:
-    adapter: mysql2
+    adapter: postgresql
     database: draftboard_prod
